[package]
name = "rust_labview_yaml"
version = "0.1.0"
authors = ["Cameron Frisby <cameron.frisby@ni.com>"]
edition = "2018"
build = "build.rs" # used to generate C header file

[lib]
name = "rust_labview_yaml"
crate-type = ["cdylib"]

[dependencies]
yaml-rust = "0.4"
libc = "0.2"

[build-dependencies]
cbindgen = "0.13"